create the forms of the extended row

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,8 @@
     <script src="{% static 'js/htmx.min.js' %}"></script>
     <script src="{% static 'js/_hyperscript.min.js' %}"></script>
     <script src="{% static 'js/flowbite.min.js' %}"></script>
+    <script src="{% static 'js/mask.min.js' %}"></script>
+    <script src="{% static 'js/alpine.min.js' %}"></script>
 
     <script>
         document.body.addEventListener('htmx:configRequest', (event) => {
