--- a/templates/cashier/tables/order_details_table.html
+++ b/templates/cashier/tables/order_details_table.html
@@ -3,18 +3,15 @@
     <tr>
       <th scope="col" class="px-2 py-3">name</th>
       <th scope="col" class="px-2 py-3">attributes</th>
-      <!--<th scope="col" class="px-2 py-3">note</th>-->
+      <th scope="col" class="px-2 py-3">D_Type</th>
       <th scope="col" class="px-2 py-3">price</th>
       <th scope="col" class="px-2 py-3">amount</th>
       <th scope="col" class="px-2 py-3">total</th>
-      <!--<th scope="col" class="px-2 py-3">Date</th>-->
-      <th scope="col" class="px-2 py-3">D_Type</th>
       <th scope="col" class="px-2 py-3">D_status</th>
-      <!--<th scope="col" class="px-2 py-3">D_date</th>-->
       <th scope="col" class="px-2 py-3">Action</th>
     </tr>
   </thead>
-  <tbody id="table_body">
+  <tbody id="table_body" x-data="{ fawry: false }">
   </tbody>
 </table>
 
