--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -101,7 +101,7 @@ form label {
     </div>
 
     <!--Order Section-->
-    <div class="grid grid-cols-4 gap-3 mt-3" style="height: 35rem">
+    <div class="grid grid-cols-4 gap-3 mt-3" style="height: 35rem" x-data="{count: 1}">
       <!--Products list-->
       <div class=" bg-gray-800 rounded-bl-lg overflow-y-auto h-full">
         <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0">
