--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 <tr class="bg-gray-900 text-xs">
   <td
-    _="on click toggle .hidden on #extend-{% now "G:i:s" %}"
+    _="on click toggle .hidden on the next <tr/>"
     class="px-2 py-4 text-base hover:text-white cursor-pointer">
     {{ product_line.product }}
   </td>
@@ -75,14 +75,6 @@
   <td class="px-3 py-4 text-base">
     <div class="flex gap-5">
       <a 
-        hx-get="{% url 'edit_order_detail' %}"
-        hx-target="#modal_form"
-        hx-swap="innerHtml"
-        _="on click remove .hidden from modal_div"
-        class="cursor-pointer hover:text-blue-700">
-        <i class="fa-solid fa-pen-to-square"></i>
-      </a>
-      <a 
         _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>
         then call calculateTotal()"
         class="cursor-pointer hover:text-red-700">
@@ -95,27 +87,82 @@
   <td colspan="8" class=" text-base">
     <table class="w-full text-sm text-left rtl:text-right text-gray-200">
       <tbody>
-        <tr class="border-b border-gray-600">
-          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> comment </th>
-          <td class="px-6 py-2"> </td>
-        </tr>
-        <tr class="border-b border-gray-600">
-          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> Date </th>
-          <td class="px-2 py-2 text-base"> {% now "M d, Y g:i a" %} </td>
-        </tr>
-        <tr class="border-b border-gray-600">
-          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> Deliver Date </th>
-          <td class="px-2 py-2 text-base">
-            {% now "Y-m-d H:i:s" as current_datetime %}
-            {% with current_datetime|add_days:product_line.deliver_date as new_datetime %}
-            {{ new_datetime|date:"M d, Y g:i a" }}
-            {% endwith %}
-          </td>
-        </tr>
-        <tr class="border-b border-gray-600">
-          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> location </th>
-          <td class="px-6 py-2"> {{ user.user.email }} </td>
-        </tr>
+        <form>
+          {% csrf_token %}
+          <tr class="border-b border-gray-600">
+            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700 w-36"> comment </th>
+            <td class="px-2 py-2 grid grid-cols-4 place-items-start " x-data="{input: false, span: true}">
+              <div class="col-span-3">
+                <input 
+                name="comment"
+                x-show="input"
+                _="on keyup put my value into the next <span/> "
+                class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
+                type="text" placeholder="comment" />
+                <span class="text-lg" x-show="span"></span>
+              </div>
+              <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
+                x-on:click="input = !input; span = !span" ></i>
+            </td>
+          </tr>
+          <tr class="border-b border-gray-600">
+            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> Date </th>
+            <td class="px-2 py-2 text-base"> {% now "M d, Y g:i a" %} </td>
+          </tr>
+          <tr class="border-b border-gray-600">
+            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> Deliver Date </th>
+            <td class="px-2 py-2 grid grid-cols-4 place-items-start " x-data="{input: false, span: true}">
+              <div class="col-span-3">
+                <div class="flex gap-2">
+                  <input
+                    _="on change put my value into the next .date"
+                    :id="$id('date')"
+                    x-show="input"
+                    name="datetime[date]"
+                    class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
+                    type="date"
+                    value="2021-03-14" 
+                    data-value="2021-03-14T12:00Z"
+                    x-data="{date: new Date($el.dataset.value)}"
+                    :value="date.toLocaleDateString('sv-en')"
+                  >
+                  <input
+                    _="on change put my value into the next .time"
+                    :id="$id('time')"
+                    x-show="input"
+                    name="datetime[time]"
+                    class="bg-gray-700 rounded-lg text-white py-1 px-2"
+                    type="time"
+                    value="12:00:00"
+                    data-value="2021-03-14T12:00Z"
+                    x-data="{date: new Date($el.dataset.value)}"
+                    :value="date.toLocaleTimeString('sv-en')" >
+                </div>
+                <span class="text-lg date" x-show="span"></span>
+                <span class="text-lg" x-show="span">   |   </span>
+                <span class="text-lg time" x-show="span"></span>
+              </div>
+              <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
+                x-on:click="input = !input; span = !span" ></i>
+            </td>
+          </tr>
+          <tr class="border-b border-gray-600">
+            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> location </th>
+            <td class="px-2 py-2 grid grid-cols-4 place-items-start " x-data="{input: false, span: true}">
+              <div class="col-span-3">
+                <input 
+                name="location"
+                x-show="input"
+                _="on keyup put my value into the next <span/> "
+                class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
+                type="text" placeholder="location" />
+                <span class="text-lg" x-show="span"></span>
+              </div>
+              <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
+                x-on:click="input = !input; span = !span" ></i>
+            </td>
+          </tr>
+        </form>
       </tbody>
     </table>
   </td>
