--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -204,9 +204,10 @@ form label {
                   OK
                 </button>
                 <button 
+                  form="order_details_form"
                   class="block text-white focus:ring-4 focus:outline-none
                   font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
-                  focus:ring-blue-800 my-3" type="button">
+                  focus:ring-blue-800 my-3" type="submit">
                   OK + Print
                 </button>
               </div>
