--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -1,172 +1,159 @@
-{% load custom_filters %}
 <tr class="bg-gray-900 text-xs" x-data="{ formData: {} }">
-  <form  @submit.prevent="console.log(formData)">
-    {% csrf_token %}
-    <td
-      _="on click toggle .hidden on the next <tr/>"
-      class="px-2 py-4 text-base hover:text-white cursor-pointer">
-      {{ product_line.product }}
-
-    </td>
-    <td class="px-2 py-4 text-base">{{ product_line.values }}</td>
-    <td class="px-2 py-4 text-base" id="price-{% now "G:i:s" %}">{{ product_line.normal_price }}</td>
-    <td class="px-2 py-4 text-base">
-      <div class="relative flex items-center">
-        <button
-          _="on click if (parseInt(#counter-input-{% now "G:i:s" %}.value) > 1)
-          then set #counter-input-{% now "G:i:s" %}'s value to (parseInt(#counter-input-{% now "G:i:s" %}.value) - 1) 
-          then set #total-price-{% now "G:i:s" %}.innerText to
-          ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))
-          then call calculateTotal()"
-          type="button"
-          class="flex-shrink-0 bg-gray-700
-          hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md
-          h-5 w-5 focus:ring-gray-700 focus:ring-2 focus:outline-none">
-          <i class="fa-solid fa-minus"></i>
-        </button>
-        <input
-        type="text" id="counter-input-{% now "G:i:s" %}" 
-        class="flex-shrink-0 text-white border-0 bg-transparent text-sm font-normal focus:outline-none focus:ring-0 w-[2rem] text-center"
-        value="1"
-        _="on change set #total-price-{% now "G:i:s" %}.innerText to
-        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))
-        then call calculateTotal()"/>
-        <button
-          _="on click set #counter-input-{% now "G:i:s" %}'s value to
-          (parseInt(#counter-input-{% now "G:i:s" %}.value) + 1)
-          then set #total-price-{% now "G:i:s" %}.innerText to
-          ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))
-          then call calculateTotal()"
-          type="button" id="decrement-button" 
-          class="flex-shrink-0 bg-gray-700 border-gray-600
-          hover:bg-gray-200 inline-flex items-center justify-center rounded-md
-          h-5 w-5 focus:ring-gray-700 focus:ring-2 focus:outline-none">
-          <i class="fa-solid fa-plus"></i>
-        </button>
-      </div>
-    </td> <!--amount-->
-    <td class="px-2 py-4 text-base" id="total-price-{% now "G:i:s" %}">{{ product_line.normal_price }}</td>
-    <td class="px-2 py-4 text-base">
-      <select id="delivery-type-{% now "G:i:s" %}"
-        _="on change if my.value == 'F' then 
-        set #price-{% now "G:i:s" %}.innerText to {{ product_line.fawry_price }} 
-        then set #total-price-{% now "G:i:s" %}.innerText to 
-        ({{ product_line.fawry_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2) 
-        then call calculateTotal()
-        else 
-        set #price-{% now "G:i:s" %}.innerText to {{ product_line.normal_price }} 
-        then set #total-price-{% now "G:i:s" %}.innerText to 
-        ({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2)
+  <input 
+    type="hidden" name="product_line_id" value="{{ pk }}">
+  <td
+    _="on click toggle .hidden on the next <tr/>"
+    class="px-2 py-4 text-base hover:text-white cursor-pointer">
+    {{ product_line.product }}
+  </td>
+  <td class="px-2 py-4 text-base">{{ product_line.values }}</td>
+  <td class="px-2 py-4 text-base price">{{ product_line.normal_price }}</td>
+  <td class="px-2 py-4 text-base">
+    <div class="relative flex items-center">
+      <button
+        _="on click if (parseInt(me.closest('td').querySelector('input').value) > 1)
+        then set me.closest('td').querySelector('input').value to (parseInt(me.closest('td').querySelector('input').value) - 1) 
+        then set me.closest('tr').querySelector('.total-price').innerText to
+        ((parseInt(me.closest('tr').querySelector('.price').innerText) * parseInt(me.closest('td').querySelector('input').value)).toFixed(2))
         then call calculateTotal()"
-        class=" border text-sm rounded-full
-        block p-1 bg-gray-700 border-gray-600 placeholder-gray-400
-        text-white focus:ring-blue-500 focus:border-blue-500">
-        <option value="N" selected>normal</option>
-        <option value="F">fawry</option>
-      </select>
-    </td>
-    <td class="px-2 py-4 text-base">
-      <select 
-        class=" border text-sm rounded-full
-        block p-1 bg-gray-700 border-gray-600 placeholder-gray-400
-        text-white focus:ring-blue-500 focus:border-blue-500">
-        <option value="P" selected>Printing</option>
-        <option value="D">Delivered</option>
-      </select>
-    </td>
-    <td class="px-3 py-4 text-base">
-      <div class="flex gap-5">
-        <a 
-          _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>
-          then call calculateTotal()"
-          class="cursor-pointer hover:text-red-700">
-          <i class="fa-solid fa-trash"></i>
-        </a>
-      </div>
-      <button type="submit">Submit</button>
-    </td>
-  </form>
+        type="button"
+        class="flex-shrink-0 bg-gray-700
+        hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md
+        h-5 w-5 focus:ring-gray-700 focus:ring-2 focus:outline-none">
+        <i class="fa-solid fa-minus"></i>
+      </button>
+      <input
+      type="text" 
+      class="flex-shrink-0 text-white border-0 bg-transparent text-sm font-normal focus:outline-none focus:ring-0 w-[2rem] text-center"
+      value="1"
+      _="on change set me.closest('tr').querySelector('.total-price').innerText to
+      ((parseInt(me.closest('tr').querySelector('.price').innerText) * parseInt(me.value)).toFixed(2))
+      then call calculateTotal()"/>
+      <button
+        _="on click set me.closest('td').querySelector('input').value to
+        (parseInt(me.closest('td').querySelector('input').value) + 1)
+        then set me.closest('tr').querySelector('.total-price').innerText to
+        ((parseInt(me.closest('tr').querySelector('.price').innerText) * parseInt(me.closest('td').querySelector('input').value)).toFixed(2))
+        then call calculateTotal()"
+        type="button" id="decrement-button" 
+        class="flex-shrink-0 bg-gray-700 border-gray-600
+        hover:bg-gray-200 inline-flex items-center justify-center rounded-md
+        h-5 w-5 focus:ring-gray-700 focus:ring-2 focus:outline-none">
+        <i class="fa-solid fa-plus"></i>
+      </button>
+    </div>
+  </td> <!--amount-->
+  <td class="px-2 py-4 text-base total-price">{{ product_line.normal_price }}</td>
+  <td class="px-2 py-4 text-base">
+    <select 
+      _="on change if my.value == 'F' then 
+      set me.closest('tr').querySelector('.price').innerText to {{ product_line.fawry_price }} 
+      then set me.closest('tr').querySelector('.total-price').innerText to 
+      ({{ product_line.fawry_price }} * parseInt(me.closest('td').querySelector('input').value)).toFixed(2) 
+      then call calculateTotal()
+      else 
+      set me.closest('tr').querySelector('.price').innerText to {{ product_line.normal_price }} 
+      then set me.closest('tr').querySelector('.total-price').innerText to 
+      ({{ product_line.normal_price }} * parseInt(me.closest('td').querySelector('input').value)).toFixed(2)
+      then call calculateTotal()"
+      class="border text-sm rounded-full
+      block p-1 bg-gray-700 border-gray-600 placeholder-gray-400
+      text-white focus:ring-blue-500 focus:border-blue-500">
+      <option value="N" selected>normal</option>
+      <option value="F">fawry</option>
+    </select>
+  </td>
+  <td class="px-2 py-4 text-base">
+    <select 
+      class="border text-sm rounded-full
+      block p-1 bg-gray-700 border-gray-600 placeholder-gray-400
+      text-white focus:ring-blue-500 focus:border-blue-500">
+      <option value="P" selected>Printing</option>
+      <option value="D">Delivered</option>
+    </select>
+  </td>
+  <td class="px-3 py-4 text-base">
+    <div class="flex gap-5">
+      <a 
+        _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>
+        then call calculateTotal()"
+        class="cursor-pointer hover:text-red-700">
+        <i class="fa-solid fa-trash"></i>
+      </a>
+    </div>
+  </td>
 </tr>
-<tr id="extend-{% now "G:i:s" %}" class="hidden bg-gray-800 text-xs">
-  <form  hx-post="{% url 'create_order' %}">
-    {% csrf_token %}
-    <td colspan="8" class=" text-base">
-      <table class="w-full text-sm text-left rtl:text-right text-gray-200">
-        <tbody>
-          <tr class="border-b border-gray-600">
-            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700 w-36"> comment </th>
-            <td class="px-2 py-2 grid grid-cols-4 place-items-start " x-data="{input: false, span: true}">
-              <div class="col-span-3">
-                <input 
-                name="comment"
-                x-show="input"
-                _="on keyup put my value into the next <span/> "
-                class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
-                type="text" placeholder="comment" />
-                <span class="text-lg" x-show="span"></span>
+<tr class="hidden bg-gray-800 text-xs">
+  <td colspan="8" class="text-base">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-200">
+      <tbody>
+        <tr class="border-b border-gray-600">
+          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700 w-36">comment</th>
+          <td class="px-2 py-2 grid grid-cols-4 place-items-start" x-data="{input: false, span: true}">
+            <div class="col-span-3">
+              {{ form.customer_comment }}
+              <span class="text-lg" x-show="span"></span>
+            </div>
+            <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
+              x-on:click="input = !input; span = !span"></i>
+          </td>
+        </tr>
+        <tr class="border-b border-gray-600">
+          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700">Date</th>
+          <td class="px-2 py-2 text-base">{% now "M d, Y g:i a" %}</td>
+        </tr>
+        <tr class="border-b border-gray-600">
+          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700">Deliver Date</th>
+          <td class="px-2 py-2 grid grid-cols-4 place-items-start" x-data="{input: false, span: true}">
+            <div class="col-span-3">
+              <div class="flex gap-2">
+                <input
+                  _="on change put my value into the next .date"
+                  :id="$id('date')"
+                  x-show="input"
+                  name="datetime[date]"
+                  class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
+                  type="date"
+                  value="2021-03-14" 
+                  data-value="2021-03-14T12:00Z"
+                  x-data="{date: new Date($el.dataset.value)}"
+                  :value="date.toLocaleDateString('sv-en')">
+                <input
+                  _="on change put my value into the next .time"
+                  :id="$id('time')"
+                  x-show="input"
+                  name="datetime[time]"
+                  class="bg-gray-700 rounded-lg text-white py-1 px-2"
+                  type="time"
+                  value="12:00:00"
+                  data-value="2021-03-14T12:00Z"
+                  x-data="{date: new Date($el.dataset.value)}"
+                  :value="date.toLocaleTimeString('sv-en')">
               </div>
-              <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
-                x-on:click="input = !input; span = !span" ></i>
-            </td>
-          </tr>
-          <tr class="border-b border-gray-600">
-            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> Date </th>
-            <td class="px-2 py-2 text-base"> {% now "M d, Y g:i a" %} </td>
-          </tr>
-          <tr class="border-b border-gray-600">
-            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> Deliver Date </th>
-            <td class="px-2 py-2 grid grid-cols-4 place-items-start " x-data="{input: false, span: true}">
-              <div class="col-span-3">
-                <div class="flex gap-2">
-                  <input
-                    _="on change put my value into the next .date"
-                    :id="$id('date')"
-                    x-show="input"
-                    name="datetime[date]"
-                    class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
-                    type="date"
-                    value="2021-03-14" 
-                    data-value="2021-03-14T12:00Z"
-                    x-data="{date: new Date($el.dataset.value)}"
-                    :value="date.toLocaleDateString('sv-en')" >
-                  <input
-                    _="on change put my value into the next .time"
-                    :id="$id('time')"
-                    x-show="input"
-                    name="datetime[time]"
-                    class="bg-gray-700 rounded-lg text-white py-1 px-2"
-                    type="time"
-                    value="12:00:00"
-                    data-value="2021-03-14T12:00Z"
-                    x-data="{date: new Date($el.dataset.value)}"
-                    :value="date.toLocaleTimeString('sv-en')" >
-                </div>
-                <span class="text-base date" x-show="span"></span>
-                <span class="text-base" x-show="span">   |   </span>
-                <span class="text-base time" x-show="span"></span>
-              </div>
-              <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
-                x-on:click="input = !input; span = !span" ></i>
-            </td>
-          </tr>
-          <tr class="border-b border-gray-600">
-            <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700"> location </th>
-            <td class="px-2 py-2 grid grid-cols-4 place-items-start " x-data="{input: false, span: true}">
-              <div class="col-span-3">
-                <input 
-                name="location"
-                x-show="input"
-                _="on keyup put my value into the next <span/> "
-                class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
-                type="text" placeholder="location" />
-                <span class="text-lg" x-show="span"></span>
-              </div>
-              <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
-                x-on:click="input = !input; span = !span" ></i>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
-  </form>
+              <span class="text-base date" x-show="span"></span>
+              <span class="text-base" x-show="span"> | </span>
+              <span class="text-base time" x-show="span"></span>
+            </div>
+            <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
+              x-on:click="input = !input; span = !span"></i>
+          </td>
+        </tr>
+        <tr class="border-b border-gray-600">
+          <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700">Location</th>
+          <td class="px-2 py-2 grid grid-cols-4 place-items-start" x-data="{input: false, span: true}">
+            <div class="col-span-3">
+              {{ form.location }}
+              <span class="text-lg" x-show="span"></span>
+            </div>
+            <i class="fa-solid fa-pen-to-square text-base place-self-center hover:text-blue-500 cursor-pointer"
+              x-on:click="input = !input; span = !span"></i>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </td>
+  <td>
+    <button hx-post="{% url 'order_detail_row' pk=pk %}" type="submit">sdfsdf</button>
+  </td>
 </tr>
+
