--- a/templates/cashier/tables/order_details_table.html
+++ b/templates/cashier/tables/order_details_table.html
@@ -1,19 +1,22 @@
-<table id="products-table" class="w-full text-sm text-left rtl:text-right text-gray-400">
-  <thead class="sticky top-0 text-sm uppercase bg-gray-700 text-gray-400">
-    <tr>
-      <th scope="col" class="px-2 py-3">name</th>
-      <th scope="col" class="px-2 py-3">attributes</th>
-      <th scope="col" class="px-2 py-3">D_Type</th>
-      <th scope="col" class="px-2 py-3">price</th>
-      <th scope="col" class="px-2 py-3">amount</th>
-      <th scope="col" class="px-2 py-3">total</th>
-      <th scope="col" class="px-2 py-3">D_status</th>
-      <th scope="col" class="px-2 py-3">Action</th>
-    </tr>
-  </thead>
-  <tbody id="table_body" x-data="{ fawry: false }">
-  </tbody>
-</table>
+<form id="order_details_form">
+  {% csrf_token %}
+  <table id="products-table" class="w-full text-sm text-left rtl:text-right text-gray-400">
+    <thead class="sticky top-0 text-sm uppercase bg-gray-700 text-gray-400">
+      <tr>
+        <th scope="col" class="px-2 py-3">name</th>
+        <th scope="col" class="px-2 py-3">attributes</th>
+        <th scope="col" class="px-2 py-3">D_Type</th>
+        <th scope="col" class="px-2 py-3">price</th>
+        <th scope="col" class="px-2 py-3">amount</th>
+        <th scope="col" class="px-2 py-3">total</th>
+        <th scope="col" class="px-2 py-3">D_status</th>
+        <th scope="col" class="px-2 py-3">Action</th>
+      </tr>
+    </thead>
+    <tbody id="table_body" x-data="{ fawry: false }">
+    </tbody>
+  </table>
+</form>
 
 
 <script>
