--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1320,6 +1320,14 @@ input:checked + .toggle-bg {
   margin-top: 1.25rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .block {
   display: block;
 }
