--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -22,13 +22,7 @@
         h-5 w-5 focus:ring-gray-700 focus:ring-2 focus:outline-none">
         <i class="fa-solid fa-minus"></i>
       </button>
-      <input
-      type="text" 
-      class="flex-shrink-0 text-white border-0 bg-transparent text-sm font-normal focus:outline-none focus:ring-0 w-[2rem] text-center amount px-0"
-      value="1"
-      _="on change set me.closest('tr').querySelector('.total-price').innerText to
-      ((parseInt(me.closest('tr').querySelector('.price').innerText) * parseInt(me.value)).toFixed(2))
-      then call calculateTotal()"/>
+      {{ form.amount }}
       <button
         _="on click set me.closest('td').querySelector('input').value to
         (parseInt(me.closest('td').querySelector('input').value) + 1)
@@ -45,32 +39,10 @@
   </td> <!--amount-->
   <td class="px-2 py-4 text-base total-price" :id="$id('total-price')", >{{ product_line.normal_price }}</td>
   <td class="px-2 py-4 text-base">
-    <select 
-      _="on change if my.value == 'F' then 
-      set me.closest('tr').querySelector('.price').innerText to {{ product_line.fawry_price }} 
-      then set me.closest('tr').querySelector('.total-price').innerText to 
-      ({{ product_line.fawry_price }} * parseInt(me.closest('tr').querySelector('input[type=text]').value)).toFixed(2) 
-      then call calculateTotal()
-      else 
-      set me.closest('tr').querySelector('.price').innerText to {{ product_line.normal_price }} 
-      then set me.closest('tr').querySelector('.total-price').innerText to 
-      ({{ product_line.normal_price }} * parseInt(me.closest('tr').querySelector('input[type=text]').value)).toFixed(2)
-      then call calculateTotal()"
-      class="border text-sm rounded-full
-      block p-1 bg-gray-700 border-gray-600 placeholder-gray-400
-      text-white focus:ring-blue-500 focus:border-blue-500">
-      <option value="N" selected>normal</option>
-      <option value="F">fawry</option>
-    </select>
+    {{ form.deliver_type }}
   </td>
   <td class="px-2 py-4 text-base">
-    <select 
-      class="border text-sm rounded-full
-      block p-1 bg-gray-700 border-gray-600 placeholder-gray-400
-      text-white focus:ring-blue-500 focus:border-blue-500">
-      <option value="P" selected>Printing</option>
-      <option value="D">Delivered</option>
-    </select>
+    {{ form.delivery_Status }}
   </td>
   <td class="px-3 py-4 text-base">
     <div class="flex gap-5">
@@ -107,28 +79,8 @@
           <td class="px-2 py-2 grid grid-cols-4 place-items-start" x-data="{input: false, span: true}">
             <div class="col-span-3">
               <div class="flex gap-2">
-                <input
-                  _="on change put my value into the next .date"
-                  :id="$id('date')"
-                  x-show="input"
-                  name="datetime[date]"
-                  class="bg-gray-700 rounded-lg w-96 text-white py-1 px-2"
-                  type="date"
-                  value="2021-03-14" 
-                  data-value="2021-03-14T12:00Z"
-                  x-data="{date: new Date($el.dataset.value)}"
-                  :value="date.toLocaleDateString('sv-en')">
-                <input
-                  _="on change put my value into the next .time"
-                  :id="$id('time')"
-                  x-show="input"
-                  name="datetime[time]"
-                  class="bg-gray-700 rounded-lg text-white py-1 px-2"
-                  type="time"
-                  value="12:00:00"
-                  data-value="2021-03-14T12:00Z"
-                  x-data="{date: new Date($el.dataset.value)}"
-                  :value="date.toLocaleTimeString('sv-en')">
+                {{ form.deliver_date }}
+                {{ form.deliver_time }}
               </div>
               <span class="text-base date" x-show="span"></span>
               <span class="text-base" x-show="span"> | </span>
