--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -1,7 +1,6 @@
 <tr class="bg-gray-900 text-xs" 
   x-data="{ price: {{ product_line.normal_price }}, fawryPrice: {{ product_line.fawry_price }} , normalPrice: {{ product_line.normal_price }} }">
-  <input 
-    type="hidden" name="product_line_id" value="{{ pk }}">
+  <input type="hidden" name="product_line_id" value="{{ pk }}">
   <td
     _="on click toggle .hidden on the next <tr/>"
     class="px-2 py-4 text-base hover:text-white cursor-pointer">
@@ -24,13 +23,20 @@
         <i class="fa-solid fa-minus"></i>
       </button>
       {{ form.amount }}
+      <!--<input-->
+      <!--type="text" id="counter-input-{% now "G:i:s" %}" -->
+      <!--class="flex-shrink-0 text-gray-900 dark:text-white border-0 bg-transparent-->
+      <!--text-sm font-normal focus:outline-none focus:ring-0 w-[2rem] text-center"-->
+      <!--value="1"-->
+      <!--_="on change set #total-price-{% now "G:i:s" %}.innerText to-->
+      <!--((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2)) " />-->
       <button
         _="on click set me.closest('td').querySelector('input').value to
         (parseInt(me.closest('td').querySelector('input').value) + 1)
         then set me.closest('tr').querySelector('.total-price').innerText to
         ((parseInt(me.closest('tr').querySelector('.price').innerText) * parseInt(me.closest('td').querySelector('input').value)).toFixed(2))
         then call calculateTotal()"
-        type="button" id="decrement-button" 
+        type="button"  
         class="flex-shrink-0 bg-gray-700 border-gray-600
         hover:bg-gray-200 inline-flex items-center justify-center rounded-md
         h-5 w-5 focus:ring-gray-700 focus:ring-2 focus:outline-none">
