--- a/templates/cashier/tables/order_details_table.html
+++ b/templates/cashier/tables/order_details_table.html
@@ -1,4 +1,5 @@
 <form id="order_details_form">
+  <input type="hidden" name="order_id" id="table_order_id">
   {% csrf_token %}
   <table id="products-table" class="w-full text-sm text-left rtl:text-right text-gray-400">
     <thead class="sticky top-0 text-sm uppercase bg-gray-700 text-gray-400">
