save all the order_details table row with on button

--- a/templates/cashier/forms/order_info.html
+++ b/templates/cashier/forms/order_info.html
@@ -5,4 +5,4 @@ placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
 placeholder="Order ID" value="{{ order_id }}"
 _="on load set #table_order_id.value to my.value
   then set #payment_order_id.value to my.value"
-/>
+readOnly />
