--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -53,6 +53,9 @@
   </td>
   <td class="px-3 py-4 text-base">
     <div class="flex gap-5">
+      <button
+        hx-post="{% url 'order_detail_row' pk=pk %}"
+        type="submit" >save</button>
       <a 
         _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>
         then call calculateTotal()"
@@ -112,7 +115,6 @@
     </table>
   </td>
   <td>
-    <button hx-post="{% url 'order_detail_row' pk=pk %}" type="submit">sdfsdf</button>
   </td>
 </tr>
 
