submit the order_details and the payment with the same button

--- a/templates/cashier/forms/order_info.html
+++ b/templates/cashier/forms/order_info.html
@@ -1,4 +1,6 @@
 <input
+id="new_order_id"
+name="new_order_id"
 type="number" aria-describedby="helper-text-explanation"  
 class="border text-sm rounded-lg block w-28 p-2.5 bg-gray-700 border-gray-600
 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
