--- a/templates/cashier/tables/order_details_table.html
+++ b/templates/cashier/tables/order_details_table.html
@@ -17,7 +17,6 @@
     <tbody id="table_body">
     </tbody>
   </table>
-  <button type="submit">Submit All</button>
 </form>
 
 
@@ -114,6 +113,7 @@
     };
 
     xhr.send(JSON.stringify(formData));
+  document.getElementById('payment_form').submit();
   }
 </script>
 
