add the clear button and fix some styles

--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1722,6 +1722,10 @@ input:checked + .toggle-bg {
   place-self: center;
 }
 
+.justify-self-start {
+  justify-self: start;
+}
+
 .overflow-auto {
   overflow: auto;
 }
