--- a/templates/settings/cashier/tabs/order_details.html
+++ b/templates/settings/cashier/tabs/order_details.html
@@ -120,7 +120,7 @@
         </button>
       </div>
       {% for comment in comment_list %}
-      <div class="flex items-center justify-center w-[30rem] gap-2 mt-3">
+      <div class="flex items-center justify-between w-[30rem] gap-2 mt-3">
         <div class="bg-gray-700 rounded-lg rounded-tl-none w-[27rem] p-2">
           <p class="text-gray-400">
             <span class="text-white font-semibold">{{ comment.user.username }} : </span>
