--- a/templates/settings/cashier/tables/customer_table.html
+++ b/templates/settings/cashier/tables/customer_table.html
@@ -17,7 +17,7 @@
       <td class="px-6 py-4 text-base">{{ customer.name_two }}</td>
       <td class="px-6 py-4 text-base">{{ customer.phone }}</td>
       <td class="px-6 py-4 text-base">
-        <a href="https://wa.me/+2{{ customer.whatsapp }}" target="_blank">
+        <a href="https://web.whatsapp.com/send?phone=+2{{ customer.whatsapp }}" target="_blank">
           <i class="fa-brands fa-whatsapp text-lg text-green-500 mr-2"></i>  {{ customer.whatsapp }}
         </a>
         </td>
